static/css/style.css
/*
Black color: 0F0F0F
Red color: FF0000
Grey :272727
White: FFFFFF
other grey: AAAAAA
lighter grey from darkreader: 303436
border color from dark reader 877D6F
*/


/* Base Styles */
body {
    /*background-color: #272727;
    background-color: black;*/
    background-color: #0F0F0F;
    color: white;
}

main {
    background: rgb(15, 15, 15);
    background: linear-gradient(0deg, rgba(15, 15, 15, 1) 0%, rgba(39, 39, 39, 1) 50%, rgba(15, 15, 15, 1) 100%);
}

#style-override ul li {
    list-style-type: none;
}

#style-override ul {
    padding: 0;
}

#style-override .logo-div h1,
#style-override .logo-div h2,
#style-override .logo-div h3,
#style-override .logo-div h4,
#style-override .logo-div h5,
#style-override .logo-div h6 {
    align-self: center;
}

#style-override .no-wrap {
    white-space: nowrap;
}

#style-override a {
    color: white;
}

#style-override .white {
    color: white;
}

#style-override .red {
    color: #FF0000;
}

#style-override .black {
    color: #0F0F0F
}

#style-override .bkg-light-grey {
    background-color: #303436
}

#style-override .bkg-grey {
    background-color: #272727
}

#style-override .bkg-black {
    background-color: #0F0F0F
}

#style-override .bkg-red {
    background-color: #FF0000
}

#style-override .border-white {
    border-color: white;
}

#style-override .border-red {
    border-color: #f91f1fcb;
    border-width: 3px;
}

#style-override .border-light-grey {
    border-color: #303436
}

#style-override .border-grey {
    border-color: #272727
}

#style-override .border-black {
    border-color: #0F0F0F
}

/* Header Styles */
#style-override .title {
    margin: 5em;
}

/* Navbar Styles */
#style-override .navbar-toggler {
    border-color: #877D6F;
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%255, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
    border-width: 3px;
    border-radius: 10px;
}

#style-override .modal-body,
#style-override .modal-header,
#style-override .modal-footer {
    color: white;
    background-color: #303436
}

/* Messages Div */

#style-override .message-div {
    margin-top: 100px;
}

/* My Containers */

#style-override .my-list-item {
    margin-left: 2%;
}

#style-override .logo-div {
    width: fit-content;
    padding: 1em 2.5em;
    align-self: center;
    margin: 1em;
    justify-content: center;
    border-radius: 10px;
    border-style: outset;
    border-color: rgb(135, 125, 111);
    border-width: 3px;
    justify-content: center;
    background-color: rgb(48, 52, 54);
    margin: 16px 0;
    box-shadow: 0 0 5px rgba(231, 26, 26, .2), 2px 2px 5px rgba(231, 26, 26, 0.4);
}

#style-override .my-container {
    align-self: center;
    padding: 20px;
    margin: 1em;
    width: 90%;
    border-radius: 10px;
    border-style: outset;
    border-color: #877d6f;
    border-width: 3px;
    justify-content: center;
    background-color: #303436;
    margin: 16px 0;
    background: rgb(53, 58, 60);
    background: linear-gradient(135deg, rgba(53, 58, 60, 1) 0%, rgba(48, 52, 54, 1) 83%, rgba(53, 41, 42, 1) 100%);
    box-shadow: 0 0 5px #e71a1a33, 2px 2px 5px rgba(231, 26, 26, 0.4);
}

/* Input Elements */

#style-override input {
    color: white;
    background-color: black;
}

#style-override form .js-input-background {
    color: white;
    background-color: black;
}

#style-override .swap-input {
    width: 70px;
}

#style-override #searchQuery {
    margin-left: .1em;
}

#style-override .form-check-input {
    border-color: white;
    border-width: 1px;
    margin-top: 5px;
}

/* Button Styles */

#style-override .my-button-group {
    gap: 5px;
}

#style-override .tag-line {

    padding-left: 10px;
    padding-right: 10px;
    border-radius: 5px;
    padding-top: 5px;
    padding-bottom: 5px;
    font-weight: 700;
}

#style-override .my-btn-border button {
    border-color: black;
    border-width: 1px;
}

#style-override .my-button-group .btn {
    border-color: black;
    border-width: 1px;
}

#style-override .btn:focus {
    outline: none;
    box-shadow: none;
}

#style-override .btn {
    border-radius: 10px;
    margin: 1px;
}

/* Footer Styles */

#style-override .footer {
    padding-top: 0.4em;
}

/* Specific Styles */

#style-override #profile {
    left: 2.5%;
    position: relative;
}

#style-override #set-name-form-label {
    margin-left: 2%
}

#style-override #set-name-form-button {
    left: 31%;
    position: relative;
    margin-top: 8%;
    margin-bottom: -2%;
}

#style-override #create-queue .my-container {
    width: 70%;
    margin-left: 15%;
}

#style-override #create-queue button {
    margin-top: 4%;
    margin-left: 26%;
}

#style-override #edit-queue .logo-div {
    width: 70%;
}

#style-override #edit-queue #search-results-and-queue-entries .logo-div {
    width: 78%;
    margin-left: 11%;
}

#style-override #edit-queue #search-results button {
    margin-left: 35%;

}

#style-override #edit-queue .remove-button {
    position: relative;
    right: 12%;

}

#style-override #edit-queue .my-container {
    margin-left: 5%;
}

#style-override #profile {
    left: 6.5%;
    position: relative;
}

#style-override #profile .logo-div {
    left: 6.5%;
    width: 75%;
    position: relative;
}

#style-override #both-queues-div {
    margin-left: -3%;
}

#style-override .my-brand {
    color: white;
    background-color: rgba(231, 26, 26, 0.796);
}

#style-override #queue-length {
    margin-left: 40%;
}

#style-override .btn-ytube {
    background-color: #e71a1a;
    background-color: rgba(231, 26, 26, 0.796);
    color: white;
    font-weight: 600;
    margin: 5px;
    border-radius: 10px;
}

#style-override #profile #welcome {
    position: relative;
    left: -4.5%;
}

#style-override #profile .btn-ytube {
    background-color: #e71a1acb;
    color: white;
    margin: 1px;
    font-weight: 600;
}

#style-override .queue-buttons-div {
    left: 10%;
    gap: 12%;
    width: 80%;
}

#style-override .queue-buttons-div button {
    width: 120%;
}

#style-override #logout {
    width: 80%;
    margin-left: 8%;
}

#style-override .blurb {
    margin-top: 1.3em;
}

#style-override .last {
    /* it was 35%, but changed it because of the profiel page. */
    margin-bottom: 43%;
}

#style-override .boost-mb-5 {
    margin-bottom: 5%;
}


@media screen and (min-width: 425px) {
    #style-override #login {
        width: 92%;
        margin-left: 4.5%;
    }

    #style-override #edit-queue .remove-button {
        right: 4%;
    }

    #style-override #profile {
        left: 5.5%;
    }

    #style-override #queue-display .my-container {
        width: 75%;
        margin-left: 7%;
    }

    #style-override #create-queue button {
        margin-left: 29.5%;
    }

    #style-override .queue-buttons-div {
        left: 16%;
        gap: 20%;
    }

    #style-override .queue-buttons-div button {
        width: 143%;
    }

    #style-override #logout {
        margin-left: 9.5%;
    }

    #style-override #index {
        width: 90%;
        margin-left: 5%;
    }

    #style-override #index .logo-div {
        width: 80%;
        margin-left: 10%;
    }

    #style-override #my-queue-div .logo-div,
    #style-override #friends-queue-div .logo-div {
        width: 65%;
        left: 12%;
    }

}

@media screen and (min-width: 768px) {

    #style-override #login {
        width: 70%;
        margin-left: 16.3%;
        margin-top: 5%;
    }

    #style-override #logout {
        width: 66%;
        margin-top: 10%;
        margin-left: 17%;
    }

    #style-override #profile {
        left: -2%;

    }

    #style-override #both-queues-div .min-height-row {
        min-height: 10em;
    }

    #style-override .queue-buttons-div {
        left: 27.5%;
        width: 60%;
        gap: 25%;
    }

    #style-override .queue-buttons-div button {
        width: 160%;
    }

    #style-override #create-queue .my-container {
        width: 50%;
        margin-left: 22.5%;
    }

    #style-override #create-queue button {
        margin-top: 3%;
        margin-left: 34%;
    }

    #style-override #edit-queue #search-results button {
        margin-left: 5%;

    }

    #style-override #edit-queue #search-results-and-queue-entries .logo-div {
        min-height: 16%;
    }

    #style-override #edit-queue .remove-button {
        right: 1%;
    }

    #style-override #both-queues-div .logo-div {
        min-height: 114px;
    }

    #style-override #both-queues-div .logo {
        position: relative;
        align-self: center;
        left: -9%;
    }


    #style-override .last {
        margin-bottom: 20%;
    }

    #style-override .footer {
        padding-top: 0.8em;
    }

    #style-override .my-button-group {
        gap: 150px;
        display: inline-block;
    }

    #style-override .min-height-row .profile-top {
        min-height: 240px;
        min-width: 310px
    }

    #style-override #user-info-div {
        padding-bottom: 6.5%;
    }

    #style-override #searchQuery {
        width: 26em;
        margin-left: 5.8em;
    }

    #style-override #index {
        width: 90%;
        margin-left: 5%;
    }

    #style-override #index .logo-div {
        width: 69%;
        margin-left: 12.5%;
    }

    /* Addresses bootstrap whitespace on the right*/
    body {
        margin-left: 35px;
    }

    #style-override #search-results-and-queue-entries {
        margin-left: -19px;
    }

    #style-override .edit-logo {
        margin-left: 15px
    }

    #style-override #edit-queue #queue-info .my-container {
        width: 70%;
        margin-left: 14%;

    }
}

@media screen and (min-width: 1024px) {
    #style-override #searchQuery {
        margin-left: 20.5%;
        width: 60%;
    }

    #style-override #login {
        width: 61%;
        margin-left: 21.3%;
        margin-top: 5%;
        margin-bottom: 3%;
    }

    #style-override #logout {
        width: 57%;
        margin-left: 21.5%;
    }

    #style-override #index {
        margin-left: 6.5%;
    }

    #style-override #profile {
        left: -1%;
    }

    #style-override #profile .queue-display-divs {
        width: 43%;
        margin-left: 4.5%;
    }

    #style-override .tag-line {
        position: fixed;
        right: 4%;
    }

    #style-override #set-name-form-button {
        left: 38%;
    }

    #style-override #both-queues-div .logo-div {
        min-height: 8em;
    }

    #style-override #both-queues-div .min-height-row {
        min-height: 10em;
    }

    #style-override #create-queue .my-container {
        width: 45%;
        margin-left: 25%;
        margin-top: 3%;
    }

    #style-override #create-queue button {
        margin-top: 2%;
        margin-left: 35%;
    }

    #style-override #edit-queue #queue-info .my-container {
        width: 50%;
        margin-left: 24%;

    }

    #style-override #edit-queue {
        margin-left: -3%;
    }

    #style-override #search-youtube {
        width: 70%;
        margin-left: 14%;
    }

    #style-override #edit-queue #search-results button {
        margin-left: 35%;
    }

    #style-override #edit-queue #search-results-and-queue-entries .logo-div {
        min-height: 18%;
    }

    #style-override #edit-queue .remove-button {
        right: -5%;
    }

    #style-override #edit-queue #queue-entries .btn-group {
        left: 3%;
    }

    #style-override #edit-queue .my-list-item {
        margin-bottom: 3%;
    }

    #style-override .last {
        margin-bottom: 25%;
    }

    #style-override .footer {
        padding-top: 0.8em;
    }

    #style-override #logout-button-container {
        margin-top: 13%;
    }
}

